[metadata]
name = rnpfind
version = file: VERSION
author = Nahin Khan
author_email = mnahinkhan@gmail.com
description = Collect and generate RNA-RBP interaction data in various formats
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mnahinkhan/rnpfind
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    hgfind>=0.0.4,<1
    sortedcontainers>=2.4.0,<3
    trackhub>=0.2.4,<1
    tqdm>=4.61.2,<5

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    rnpfind = rnpfind.main:main
    rnpfind-download = rnpfind.main:download_ro_data
